tests/ui/traits/impl-for-module.stderr
error[E0573]: expected type, found module `a`
  --> $DIR/impl-for-module.rs:7:12
   |
LL | trait A {
   | ------- similarly named trait `A` defined here
...
LL | impl A for a {
   |            ^ help: a trait with a similar name exists: `A`

error: hi
  --> $DIR/impl-for-module.rs:7:1
   |
LL | trait A {
   | ------- built-in `dyn A` implementation for this trait
...
LL | impl A for a {
   | ^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0573`.
